tests/snapshots/validator_snapshots__validator_all@validator-22.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/language/hello.of
---
ValidationErrors(
    [
        "invalid operator 'Add' for operand of type 'string' in function 'test_module::main'",
        "invalid operator 'Add' for operand of type 'string' in function 'test_module::main'",
        "invalid operator 'Add' for operand of type 'string' in function 'test_module::main'",
        "unknown variable 'print' in function 'test_module::main'",
        "unknown variable 'print' in function 'test_module::main'",
        "unknown variable 'print' in function 'test_module::main'",
    ],
)
