tests/snapshots/validator_snapshots__validator_all@validator-23.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/language/test_list.of
---
ValidationErrors(
    [
        "module 'test_module' imports unknown module 'of:core'",
        "unknown member 'get' on 'null' in function 'test_module::main'",
        "unknown member 'push' on 'null' in function 'test_module::main'",
    ],
)
