tests/snapshots/validator_snapshots__validator_all@validator-24.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/lexer/arithmetic_and_comparison_tokens_are_recognized.of
---
ParserError(
    "unexpected token '+'",
)
