tests/snapshots/validator_snapshots__validator_all@validator-26.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/lexer/comment_then_identifier_on_later_line_has_correct_line.of
---
ParserError(
    "unexpected token identifier 'bar'",
)
