tests/snapshots/validator_snapshots__validator_all@validator-27.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/lexer/double_ampersand_is_and_token.of
---
ParserError(
    "unexpected token '&&'",
)
