tests/snapshots/validator_snapshots__validator_all@validator-28.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/lexer/empty_input_returns_eof.of
---
Ok
