tests/snapshots/validator_snapshots__validator_all@validator-29.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/lexer/escaped_backslash_is_kept_inside_string.of
---
ParserError(
    "unexpected token string literal",
)
