tests/snapshots/validator_snapshots__validator_all@validator-31.snap
---
source: tests/validator_snapshots.rs
expression: result
input_file: examples/lexer/identifier_is_scanned.of
---
ParserError(
    "unexpected token identifier 'hello'",
)
